--- a/WebContents/keywordSearch.html
+++ b/WebContents/keywordSearch.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <h1> Ebay Searcher </h1>
+        <link rel="stylesheet" type="text/css" href="suggestion.css"> 
     </head>
     <body>
         <form action='search' method='GET'>
@@ -11,5 +12,8 @@
             <input name='numResultsToReturn' value='10' type="hidden"/>
             <input type='submit'/>
         </form>
+        <div class="suggestions" hidden>
+        </div>
+        <script src="suggestion.js"></script>
     </body>
 </html>
