--- a/WebContents/keywordSearch.html
+++ b/WebContents/keywordSearch.html
@@ -31,7 +31,7 @@
     <body>
         <form action='search' method='GET'>
             <h3> Please enter a query to search for and click submit </h3>
-            <input name='q' type='text'/>
+            <input name='q' type='text' id="searchBox"/>
             <input name='numResultsToSkip' value='0' type="hidden"/>
             <input name='numResultsToReturn' value='10' type="hidden"/>
             <input type='submit'/>
@@ -39,5 +39,13 @@
         <div class="suggestions" hidden>
         </div>
         <script src="suggestion.js"></script>
+        <script type="text/javascript">
+            window.onload = function(){
+                var textBox = new AutoSuggestControl(
+                        document.getElementById("searchBox"),
+                        new SuggestionProvider()
+                    );
+            }
+        </script>
     </body>
 </html>
