--- a/TestCases/t1.html
+++ b/TestCases/t1.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="http://localhost:1448/getItem.html" />
+<link rel="selenium.base" href="http://localhost:1448/keywordSearch.html" />
 <title>t1</title>
 </head>
 <body>
@@ -13,13 +13,13 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/eBay/getItem.html</td>
+	<td>/eBay/keywordSearch.html</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>name=id</td>
-	<td>1045348061</td>
+	<td>id=searchBox</td>
+	<td>superman</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -27,13 +27,28 @@
 	<td></td>
 </tr>
 <tr>
+	<td>clickAndWait</td>
+	<td>id=nextLink</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=previousLink</td>
+	<td></td>
+</tr>
+<tr>
 	<td>type</td>
-	<td>name=id</td>
-	<td>123456789</td>
+	<td>id=searchBox</td>
+	<td>superman</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
 	<td>css=input[type=&quot;submit&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=View Item</td>
 	<td></td>
 </tr>
 
