--- a/TestCases/t3.html
+++ b/TestCases/t3.html
@@ -4,22 +4,22 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://localhost:1448/getItem.html" />
-<title>t1</title>
+<title>t3</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">t1</td></tr>
+<tr><td rowspan="1" colspan="3">t3</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/eBay/keywordSearch.html</td>
+	<td>/eBay/getItem.html</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=searchBox</td>
-	<td>superman</td>
+	<td>name=id</td>
+	<td>1045348061</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -27,28 +27,13 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>id=nextLink</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=previousLink</td>
-	<td></td>
-</tr>
-<tr>
 	<td>type</td>
-	<td>name=q</td>
-	<td>superman</td>
+	<td>name=id</td>
+	<td>123456789</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
 	<td>css=input[type=&quot;submit&quot;]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=View Item</td>
 	<td></td>
 </tr>
 
